# umbrel-community-app-store

./: Cargo.toml  backup.sh  darkmode.html  deploy-all.sh  restore.sh  umbrel-app-store.yml
K-Social/: Dockerfile  docker-compose.yml  exports.sh  umbrel-app.yml
bridge/: Dockerfile.dashboard  config.yaml  nginx.dashboard.conf
elldeeone-kas-rusty-kaspad/: docker-compose.yml  umbrel-app.yml
k/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
k-social/: DEPLOYMENT.md  Dockerfile  docker-compose.yml  emoji-picker-react-4.16.1.tgz  exports.sh  umbrel-app.yml  vite.config.ts
kaspa-database/: docker-compose.dev.yml  docker-compose.yml  exports.sh  umbrel-app.yml
kaspa-explorer/: docker-compose.local.yml  docker-compose.yml  exports.sh  nginx.conf  umbrel-app.yml
kaspa-graph-inspector/: docker-compose.yaml
kaspa-indexer/: docker-compose.yml  exports.sh  umbrel-app.yml
kaspa-k-social/: docker-compose.yml  exports.sh  umbrel-app.yml
kaspa-node/: docker-compose.yml  kaspad-entrypoint.sh  umbrel-app.yml
kaspa-rest-server/: README.md  constants.py  main.py
kaspa-rusty-kaspad/: docker-compose.yml  umbrel-app.yml
kaspa-stratum/: docker-compose.yml  exports.sh  umbrel-app.yml
kaspa-wasm32-sdk/: package-sizes.js
rusty-kaspa-RKStratum2.0/: .dockerignore  Cargo.toml
rusty-kaspa-bridge-dashboard/: Dockerfile  nginx.dashboard.conf
rusty-kaspa-stratum/: Backup_rusty-kaspa-stratum.textClipping  Cargo.toml  Dockerfile.dashboard  Dockerfile.stratum-bridge  nginx.dashboard.conf
rusty-kaspad/: docker-compose.yml  exports.sh
(+1779 files in other folders)
