[workspace]
members = ["bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kaspa Community"]
license = "MIT"
repository = "https://github.com/kaspanet/rusty-kaspa"
include = ["bridge/**"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
